<resources>
    <string name="app_name">CASF</string>
    <string name="action_settings">Settings</string>
    <string name="ingresar">Ingresar</string>
    <string name="contrasena">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="carga">Descarga de rutas</string>
    <string name="cargar">Cargar</string>
    <string name="busqueda">Búsqueda</string>
    <string name="registrolectura">Registro de Lectura</string>
    <string name="confirmar_lectura">Confirmar Lectura</string>
    <string name="datos">FT0000002	Folio:	033\nAnabel Sosa Sosa \nJuan Esquivel 18 \nMedidor: 787465</string>
    <string name="registrar">Registrar</string>
    <string name="registro_de_gps">Registro de GPS</string>
    <string name="longitud">Longitud</string>
    <string name="latitud">Latitud</string>
    <string name="foto_de_medidor">Foto de Medidor</string>
    <string name="guardar">Guardar</string>
    <string name="regresar">Regresar</string>
    <string name="siguiente">Siguiente</string>
    <string name="delfolio">Del folio</string>
    <string name="alfolio">Al folio</string>
    <string name="user">V.7 \nUsuario:</string>
    <string name="titulo">COMISIÓN DE AGUA Y SANEAMIENTO DE FORTÍN \nV.7</string>
    <string name="dialog_title">Confirmar</string>
    <string name="carga_de_universos">Universos</string>

    <string-array name="sector">
        <item>SECTOR</item>
        <item>001</item>
        <item>002</item>
        <item>003</item>
        <item>004</item>
    </string-array>
    <string-array name="ruta">
        <item>RUTA</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
    </string-array>
    <string-array name="inconsistencias">
        <item>0-CLAVE</item>
        <item>1-MEDIDOR DESCOMPUESTO</item>
        <item>2-MEDIDOR DESTRUIDO</item>
        <item>3-OBSTACULOS</item>
        <item>4-MEDIDOR INVERTIDO</item>
        <item>5-SIN MEDIDOR</item>
        <item>6-SIN SELLOS</item>
        <item>7-VIDRIO ROTO</item>
        <item>8-VIDRIO OPACO</item>
        <item>9-CAMBIO DE CLASIFICACION</item>
        <item>10-CASA CERRADA</item>
        <item>11-SIN USO</item>
        <item>12-FUGA EN MEDIDOR</item>
        <item>13-URGE SACAR MEDIDOR</item>
        <item>14-TERRENO BALDIO</item>
        <item>15-NO PERMITIERON PASAR</item>
        <item>16-MEDIDOR DESCONECTADO</item>
        <item>17-MEDIDOR SIN MANECILLAS</item>
        <item>18-TOMA LIMITADA</item>
        <item>19-DESHABITADO</item>
        <item>20-TOMA CANCELADA</item>
        <item>21-CAMBIO DE MEDIDOR</item>
        <item>22-ABC</item>
        <item>23-MEDIDOR NUEVO</item>
        <item>24-CARATULA PINTADA O RAYADA</item>
        <item>25-FUGA EN LA CALLE</item>
        <item>26-FUGA EN EL CUADRO</item>
        <item>27-PERRO SUELTO</item>
        <item>28-FUGA BANQUETA</item>
        <item>29-FUGA LLAVE DE PASO</item>
        <item>30-CAMBIO DE RUTA Y FOLIO</item>
        <item>31-MEDIDOR SUCIO</item>
        <item>32-MEDIDOR EN CAJA DE REGISTRO</item>
        <item>33-AUMENTAR PROMEDIO</item>
        <item>34-ESCOMBRO</item>
        <item>35-MEDIDOR EMPOTRADO</item>
        <item>36-FUGA INTERNA</item>
        <item>37-ACT. DE LECT. POR CAMBIO LECTURISTA</item>
        <item>38-ACTUALIZACION DE LECTURA</item>
        <item>39-LECTURA DADA POR USUARIO</item>
    </string-array>



</resources>
